Centered the content to the page. Added polaroid on 4 pictures (not on mobil view). Started to add img for a grid

--- a/code/index.html
+++ b/code/index.html
@@ -35,30 +35,47 @@
         <p class="heading-two"><strong>One, two, three...</strong></p></p>
         <p class="hedline-two"><strong>Lets dive down to where there are no up so or down!</strong></p>
         <p class="blubb"> Blubb,blubb blubb blubb. Blubb, blubb blubb blubb blubb, blubb blubb blubb blubb,blubb blubb blubb.</p> 
-        <p class="blubb"> Blubb blubb blubb. Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb.</p>
+        <p class="blubb"> Blubb blubb blubb. Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. </p>
         <p class="blubb-on-mobile">Blubb blubb blubb...</p>
       </div>
     </section>
 
     <section class="four-news-container">
       <div class="four-image">
-        <img src="assets/ryoji-hayasaka-NPVICB8ipdg-unsplash.jpg" alt="Jelly Fish"></div>
+        <img src="assets/ryoji-hayasaka-NPVICB8ipdg-unsplash.jpg" alt="Jellyfish"></div>
       </div>
       <div>
-        <img class="four-image" src="assets/connor-wang-AUUdulLnRnE-unsplash.jpg" alt="Jelly Fish">
+        <img class="four-image" src="assets/connor-wang-AUUdulLnRnE-unsplash.jpg" alt="Jellyfish">
       </div>
       <div>  
-        <img class="four-image" src="assets/tim-mossholder-1xSuJgr25jM-unsplash.jpg" alt="Jelly Fish">
+        <img class="four-image" src="assets/tim-mossholder-1xSuJgr25jM-unsplash.jpg" alt="Jellyfish">
       </div> 
       <div> 
-        <img class="four-image" src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jelly Fish">
+        <img class="four-image" src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jellyfish">
       </div> 
     </section>
     
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="wrapper">
+      <div>
+        <h3>Let's go even deeper...</h3>
+      </div>
+          <section class="grid-articles">
+            <div class="grid-img">
+              <img src="assets/darren-chan-gAToI38WygU-unsplash.jpg" alt="Jellyfish">
+            </div>
+            <div class="grid-img">
+              <img src="assets/falco-negenman--f2sJr-PJDA-unsplash.jpg" alt="Jellyfish">        </div>
+            </div>
+            <div class="grid-img">
+              <img src="assets/ned-daniels-dr_9oxbVnuc-unsplash.jpg" alt="Jellyfish">
+            </div>            
+            <div class="grid-img">
+              <img src="assets/nik-ramzi-nik-hassan-mbpKRQEjZis-unsplash.jpg" alt="Jellyfish">
+            </div>
+          </section>  
     </section>
+
 
     <footer></footer>
   </body>
