--- a/code/login.html
+++ b/code/login.html
@@ -14,10 +14,10 @@
     <label for="checkbox"><a class="menu-button"></a>
     </label>
     <div class="menu-content">
+      <a href="index.html" target="blank">home</a>
       <a href="contacts.html" target="blank">contact</a>
       <a href="about.html" target="blank">about</a>
-      <a href="index.html" target="blank">home</a>
-      <a href="login.html" target="blank">login</a>
+      <a href="signup.html" target="blank">sign up</a>
     </div>
     <div class="search-content">
       <input type="checkbox" id="searchbox">
@@ -38,9 +38,9 @@
     <h2>LOGIN</h2>
     <h3>Don't got an account?</h3> <a href="signup.html">Sign up!</a><br><br><br>
     <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username"><br>
+    <input type="text" id="username" name="username" placeholder="Your username"><br>
     <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password"><br>
+    <input type="password" id="password" name="password" placeholder="Your password"><br>
     <input type="submit" value="Login">
   </form>
 </section>
