All small news cards and footer

--- a/code/index.html
+++ b/code/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-
+    <!-- Header, Logotype, Name of site and Menu -->
     <header class="header">
-        <!-- Logotype and name of site -->
         <img class="logo" src="./Silhuette-Logotype-with-circle.svg" alt="Logotype">
         <h1 class="newspaper-name">The Fashionable Update</h1>
         <nav class="navigation-menu">
@@ -24,21 +23,83 @@
     </header>
 
 
-
+    <!-- The Big News -->
     <section class="big-news">
-        <!-- Main news image, heading and text -->
+
         <div></div>
     </section>
 
+    <!-- The Smaller News  -->
     <section class="smaller-news">
-        <!-- The other news  -->
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+
+        <div class="news-card">
+            <div class="couture">
+                <img src="./Couture.jpg" alt="Augusta Lundin Exhibition">
+                <div class="heading-couture">
+                    <h2>Final Call for <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Augusta Lundin - The First Fashion House in Sweden:</span> Exhibition to
+                        close on Sunday</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="news-card">
+            <div class="greenwashing">
+                <img src="./Greenwashing.jpg" alt="How to spot greenwashing">
+                <div class="heading-greenwashing">
+                    <h2><span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Environmentally friendly?</span> How to spot greenwashing and make sure your garments really
+                        are sustainable</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="news-card">
+            <div class="silk-scarves">
+                <img src="./Silk-Scarves.jpg" alt="Silk Stories to launch collection">
+                <div class="heading-scarves">
+                    <h2>Independent label <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">The Silk Stories</span> to launch their SS21 collection</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="news-card">
+            <div class="me-too">
+                <img src="./Me-Too.jpg" alt="#me too is changing the fashion industry">
+                <div class="heading-me-too">
+                    <h2>How <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">#me too</span> is changing the fashion industry: Tales from the inside</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="news-card">
+            <div class="embroidery">
+                <img src="./World-Embroidery.jpg" alt="Embroidery is back!">
+                <div class="heading-embroidery">
+                    <h2><span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Embroidery is back!</span> Practise your skills and get inspired by the professionals</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="news-card">
+            <div class="music">
+                <iframe src="https://open.spotify.com/embed/track/1ByVGqBt33n0iT5wgbwVzN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <div class="heading-music">
+                    <h2>Wanna know that´s in our heads? Check out tune of the week by Stockholm post-punk band <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Viagra Boys</span></h2>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <!-- Footer, Copyright and Social Media  -->
+    <footer class="footer">
+        <div class="copyright">
+            <p>&copy; The Fashionable Update</p>
+            <div class="social-media">
+                <p>FOLLOW US on INSTAGRAM and FACEBOOK</p>
+                <i class="fab fa-instagram"></i>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 
