Updated Title image

--- a/code/index.html
+++ b/code/index.html
@@ -16,14 +16,16 @@
 
   <body>
     
-    <header class="header container">
+    <header class="header">
+      <div class="container">
       <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
       <img class="title" src="/assets/title.png" alt="Wheeeekly title image">
       <nav class="navigation">
-        <a class="nav link 1" href="">One</a>
-        <a class="nav link 2" href="">Two</a>
-        <a class="nav link 3" href="">Three</a>
+        <a class="navigation-element" href="#">Topics</a>
+        <a class="navigation-element" href="#">Shop</a>
+        <a class="navigation-element" href="#">Rescues</a>
       </nav>
+      </div>
     </header>
 
     <section class="big-news">
