--- a/code/login.html
+++ b/code/login.html
@@ -19,15 +19,6 @@
       <a href="about.html" target="blank">about</a>
       <a href="signup.html" target="blank">sign up</a>
     </div>
-    <div class="search-content">
-      <input type="checkbox" id="searchbox">
-      <label for="searchbox">
-        <img class="search-button" src="../pictures/magnify.png">
-      </label>
-      <div class="searchbar">
-        <input type="text" placeholder="Search..">
-      </div>
-    </div>
   </nav>
   <div class="logo"><img src="../pictures/logo_space.svg"></div>
   <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
@@ -38,9 +29,10 @@
     <h2>LOGIN</h2>
     <h3>Don't got an account?</h3> <a href="signup.html">Sign up!</a><br><br><br>
     <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username" placeholder="Your username"><br>
+    <input type="text" id="username" name="username" placeholder="Your username" required><br>
     <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" placeholder="Your password"><br>
+    <input type="password" id="password" name="password" placeholder="Your password" minlength="8"
+       maxlength="12" required><br>
     <input type="submit" value="Login">
   </form>
 </section>
