Continued with tablet and laptop mode

--- a/code/index.html
+++ b/code/index.html
@@ -126,16 +126,18 @@
   </section>
 
   <footer>
-    <h3>TRAVEL NEWS</h3>
-    <p>Contact us</p>
-    <p>Subscribe</p>
-    <p>Customer Service</p>
-    
-    <i class="footer-logo fab fa-twitter"></i>
-    <i class="footer-logo fab fa-facebook-f"></i>
-    <i class="footer-logo fab fa-instagram"></i>
-    <i class="footer-logo fas fa-envelope"></i>
-
+    <div>
+      <h3>TRAVEL NEWS</h3>
+      <p>Contact us</p>
+      <p>Subscribe</p>
+      <p>Customer Service</p>
+    </div> 
+    <div>
+      <i class="footer-logo fab fa-twitter"></i>
+      <i class="footer-logo fab fa-facebook-f"></i>
+      <i class="footer-logo fab fa-instagram"></i>
+      <i class="footer-logo fas fa-envelope"></i>
+    </div>
   </footer>
 
 </body>
