--- a/code/index.html
+++ b/code/index.html
@@ -22,8 +22,9 @@
       <img class="title" src="/assets/title.png" alt="Wheeeekly title image">
       <nav class="navigation">
         <a class="navigation-element" href="#">Topics</a>
-        <a class="navigation-element" href="#">Shop</a>
         <a class="navigation-element" href="#">Rescues</a>
+        <a class="navigation-element" href="#">About Us</a>
+        <a class="navigation-element" href="#">Shop</a>
       </nav>
       </div>
     </header>
