--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+  <!--Header with nav-bar, background and animation-->
   <header class="header">
+    <!--navbar with links and searchbar, collapses on mobile devices-->
     <nav class="nav">
       <input type="checkbox" id="checkbox">
       <label for="checkbox"><a class="menu-button"></a>
@@ -29,11 +31,14 @@
           <img class="search-button" src="../pictures/magnify.png">
         </label>
     </nav>
+    <!-- meteor animation -->
     <div class="meteor"></div>
+    <!-- logo, normal and simpler version for mobile devices-->
     <div class="logo"><img src="../pictures/logo_space.svg"></div>
     <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
   </header>
 
+  <!--Top news, the most important news. Take up big space and top of the content-->
   <section class="big-news">
     <container class="big-img-container">
       <img src="../pictures/astronaut.jpg">
@@ -50,6 +55,7 @@
     </container>
   </section>
 
+  <!-- Section with all the lesser news. Many more and smaller with less text than the top news-->
   <section class="small-news">
     <div class="grid-wrapper">
       <container class="small-img-container">
@@ -185,6 +191,7 @@
       <a class="top-button" href="#top">^<br>^</a>
   </section>
 
+  <!-- footer with Technigo logo and mt copywrigth-->
   <footer class="footer">
     <div class="footer-wrapper">
       <p>&copy; Pauline Andersson 2021</p>
