--- a/code/login.html
+++ b/code/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="ut-8" />
   <meta name="viewport" content="width=device-width">
-  <title>Space News Site</title>
+  <title>Login</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -31,8 +31,8 @@
     <label for="username">Username:</label><br>
     <input type="text" id="username" name="username" placeholder="Your username" required><br>
     <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" placeholder="Your password" minlength="8"
-       maxlength="12" required><br>
+    <input type="password" id="password" name="password" placeholder="Your password" minlength="8" maxlength="12"
+      required><br>
     <input type="submit" value="Login">
   </form>
 </section>
