--- a/code/signup.html
+++ b/code/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="ut-8" />
     <meta name="viewport" content="width=device-width">
-    <title>Space News Site</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -33,14 +33,13 @@
         <label for="last_name">Last name:</label><br>
         <input type="text" id="last_name" name="last_name" placeholder="Armstrong" required><br>
         <label for="email">E-mail:</label><br>
-        <input type="email" id="email" name="email" placeholder="example@example.com" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" 
-        required><br><br>
+        <input type="email" id="email" name="email" placeholder="example@example.com" required><br><br>
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" placeholder="Choose a username" required><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" placeholder="Choose a password" minlength="8"
-        maxlength="12" required><br>
-        <input type="submit" value="Submit">
+            maxlength="12" required><br>
+        <input type="submit" value="Sign Up">
     </form>
 </section>
 
