Added Highlights section styled with grid

--- a/code/index.html
+++ b/code/index.html
@@ -68,9 +68,26 @@
           </div>
         </div>
       </section>
+    <!--Highlights section-->
+      <section class="highlights-section">
+        
+        <div class="container">
+          <h1> Trending now</h1>
+          <div class="grid-container">
+            <div class="each-highlight highlight1"> Lorum ipsumLorum ipsumLorum ipsumLorum ipsumLorum ipsum</div>
+            <div class="each-highlight highlight2">Lorum ipsumLorum ipsumLorum ipsumLorum ipsumLorum ipsum</div>
+            <div class="each-highlight highlight3">Lorum ipsumLorum ipsumLorum ipsumLorum ipsumLorum ipsum</div>
+            <div class="each-highlight highlight4">Lorum ipsumLorum ipsumLorum ipsumLorum ipsumLorum ipsum</div>
+
+          </div>
+        </div>
+
+      </section>
     <!-- The other news section -->
       <section class="ordinary-news"> 
         <div class="container">
+          <h1>News</h1>
+
           <div class="news">
             <a href="" class="each-news">
               <img src="./arctic_city.jpg" class="ordinarynews-image" alt="Arctic city">
