edit hovers and animations && clean up some css cde

--- a/code/index.html
+++ b/code/index.html
@@ -23,7 +23,7 @@
         <div class="desktop-menu-cnt">
           <div class="header-container">
             <!-- LOGO -->
-            <a href="/" class="logo">
+            <a href="/code/index.html" class="logo">
               <img src="./assets/logo.svg" alt="" />
             </a>
 
@@ -38,10 +38,12 @@
 
           <nav id="main-menu-cnt">
             <ul class="main-menu">
-              <li class="main-menu-items"><a href="/">Home</a></li>
-              <li class="main-menu-items"><a href="">JS</a></li>
-              <li class="main-menu-items"><a href="">Contact us</a></li>
-              <li class="main-menu-items"><a href="">About us</a></li>
+              <li class="main-menu-items">
+                <a href="/code/index.html">Home</a>
+              </li>
+              <li class="main-menu-items"><a href="/a">JS</a></li>
+              <li class="main-menu-items"><a href="/b">Contact us</a></li>
+              <li class="main-menu-items"><a href="/c">About us</a></li>
             </ul>
           </nav>
         </div>
